<resources>
    <string name="app_name">Romeo558\'s Diary</string>
    <string name="home">Home</string>
    <string name="info">Info</string>
    <string name="settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="activity_info_label">Info</string>
    <string name="activity_info_settings">Settings</string>
    <string name="date_text">CURRENTDATE</string>
    <string name="student_name">STUDENT</string>
    <string name="copyright">Romeo558`corp. All rights reserved.</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share_placeholder">Share</string>
    <string name="date_placeholder">1.01.2022</string>
    <string name="no_internet_connection">Отсутствует подключение к интернету</string>
    <string name="no_internet_connection_2">Это приложение не может работать корректно при отсутствии интернета. \nВключите интернет и нажмите "Ок."</string>
    <string name="ok">Ок</string>
    <string name="question1_text">Как вы узнали про наше приложение?</string>
    <string name="question2_text">Сколько вам лет?</string>
    <string name="answer1_option1_text">Реклама</string>
    <string name="answer1_option2_text">По совету друзей/родственников</string>
    <string name="answer1_option3_text">Нашёл в PlayMarket</string>
    <string name="answer2_option1_text">9-12</string>
    <string name="answer2_option2_text">13-16</string>
    <string name="answer2_option3_text">18 и больше</string>
    <string name="submit_button_text">Подтвердить</string>
    <string name="welcome_text">Позвольте нам провести небольшой опрос:</string>
    <string name="question3_text">Как вы сообираетесь использовать наше приложение?</string>
    <string name="answer3_option1_text">Личное пользование</string>
    <string name="answer3_option2_text">Для школы</string>
    <string name="answer3_option3_text">Другое</string>
    <string name="greetings">Приветствуем вас в моём приложении - RomeoDiary. \nЭто приложение легко и быстро покажет вам какое домашнее задание вам задали на сегодня и какие оценки вы получили.</string>
    <string name="start_button_text">НАЧНЁМ!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="app_name_full">Romeo558\'s Diary</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="authentificate">Войти</string>
</resources>