<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/parchment_light"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:text="@string/welcome_text"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/question1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/question1_text"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/answers1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/answer1_option1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer1_option1_text" />

            <RadioButton
                android:id="@+id/answer1_option2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer1_option2_text"/>

            <RadioButton
                android:id="@+id/answer1_option3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer1_option3_text"/>
        </RadioGroup>

        <TextView
            android:id="@+id/question2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question2_text"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/answers2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/answer2_option1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer2_option1_text" />

            <RadioButton
                android:id="@+id/answer2_option2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer2_option2_text"/>

            <RadioButton
                android:id="@+id/answer2_option3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer2_option3_text"/>
        </RadioGroup>

        <TextView
            android:id="@+id/question3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/question3_text"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <!-- Ответы на третий вопрос -->
        <RadioGroup
            android:id="@+id/answers3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/answer3_option1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer3_option1_text" />

            <RadioButton
                android:id="@+id/answer3_option2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer3_option2_text"/>

            <RadioButton
                android:id="@+id/answer3_option3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer3_option3_text"/>
        </RadioGroup>

        <!-- Кнопка отправки -->
        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_button_text"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/custom_button" />

    </LinearLayout>

</ScrollView>
