<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Content View -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Top Header -->
        <RelativeLayout
            android:id="@+id/topHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="8dp">

            <!-- Date Button -->
            <Button
                android:id="@+id/date_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="4dp"
                android:text="@string/date_placeholder"
                android:textColor="@android:color/white" />

            <!-- Share Button -->
            <Button
                android:id="@+id/share_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/share_placeholder"
                android:textColor="@android:color/white" />

            <!-- Text View -->
            <TextView
                android:id="@+id/student_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_toStartOf="@id/share_button"
                android:layout_toEndOf="@+id/date_button"
                android:fontFamily="sans-serif-light"
                android:text="@string/student_name"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:gravity="center"
                />
        </RelativeLayout>

        <!-- List View -->
        <ListView
            android:id="@+id/myListView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clipToPadding="false"
            android:paddingTop="8dp"
            android:paddingBottom="8dp" />

        <!-- Bottom Header -->
        <RelativeLayout
            android:id="@+id/bottomHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/copyright"
                />

        </RelativeLayout>
    </LinearLayout>

    <!-- NavigationView -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/drawer_menu" />

    <FrameLayout
        android:id="@+id/frame_container_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</androidx.drawerlayout.widget.DrawerLayout>